ボタンの追加

--- a/src/index.html
+++ b/src/index.html
@@ -30,17 +30,22 @@
   <script defer src="./assets/js/script.js"></script>
 </head>
 <body>
-  <header>
+  <div class="wrap">
+    <header>
 
-  </header>
-  <main>
+    </header>
+    <main>
     <div class="inner">
       <p class="test">変更のテスト</p>
     </div>
-  </main>
-  <footer>
+    <div class="button-layout">
+      <a href="#" class="button">View&nbsp;More</a>
+    </div>
+    </main>
+    <footer>
 
-  </footer>
+    </footer>
+  </div>
 </body>
 
 </html>
