--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
     <main>
 
     <div class="button-layout">
-      <a href="#" class="button">View&nbsp;More</a>
+      <a href="#" class="button">View&nbsp;More<span></span></a>
     </div>
     </main>
     <footer>
