ヘッダー最初のコミット

--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,72 @@
 </head>
 <body>
   <div class="wrap">
-    <header>
+    <header class="header js-header">
+      <div class="header__inner">
+        <a href="index.html" class="header__name-a">
+          <h1 class="header__name">
+            <img class="header__logo" src="/src/images/common/logo.svg" alt="">
+          </h1>
+        </a>
+        <!-- <nav class="header__nav md-none">
+          <ul class="header__items">
+            <li class="header__item">
+              <a href="about.html" class="header__link">About</a>
+            </li>
+            <li class="header__item">
+              <a href="#service" class="header__link">Service</a>
+            </li>
+            <li class="header__item">
+              <a href="#news" class="header__link">News</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="header__contact-layout">
+          <a href="contact.html" class="header__contact contact-button md-none">Contact</a>
+        </div>
+      </div>
 
+      <div class="hamburger js-hamburger md-show">
+        <div class="hamburger-layout">
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+
+      <div class="drawer-menu js-drawer">
+        <div class="drawer-menu__inner">
+          <ul class="drawer-menu__items">
+            <li class="drawer-menu__item">
+              <a href="about.html" class="drawer-menu__link">
+                <img class="drawer__logo1" src="" alt="ドロワー先頭ロゴ">
+                <h4 class="logo-text">About</h4>
+              </a>
+            </li>
+            <li class="drawer-menu__item">
+              <a href="#service" class="drawer-menu__link">
+                <img class="drawer__logo1" src="" alt="ドロワー先頭ロゴ">
+                <h4 class="logo-text">Service</h4>
+              </a>
+            </li>
+            <li class="drawer-menu__item">
+              <a href="#news" class="drawer-menu__link">
+                <img class="drawer__logo1" src="" alt="ドロワー先頭ロゴ">
+                <h4 class="logo-text">News</h4>
+              </a>
+            </li>
+            <li class="drawer-menu__item">
+              <a href="contact.html" class="drawer-menu__link drawer-menu__link--contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div> -->
     </header>
     <main>
 
-    <div class="button-layout">
+    <!-- <div class="button-layout">
       <a href="#" class="button">View&nbsp;More<span class="button-arrow"></span></a>
-    </div>
+    </div> -->
     </main>
     <footer>
 
