名前周りのレイアウト追加

--- a/src/index.html
+++ b/src/index.html
@@ -33,9 +33,9 @@
   <div class="wrap">
     <header class="header js-header">
       <div class="header__inner">
-        <a href="index.html" class="header__name-a">
+        <a href="index.html" class="header__name-layout">
           <h1 class="header__name">
-            <img class="header__logo" src="/src/images/common/logo.svg" alt="">
+            <img class="header__logo" src="/src/images/logo.svg" alt="">
           </h1>
         </a>
         <!-- <nav class="header__nav md-none">
