--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       <div class="header__inner">
         <a href="index.html" class="header__name-layout">
           <h1 class="header__name">
-            <img class="header__logo" src="/src/images/logo.svg" alt="">
+            <img class="header__logo" src="./assets/images/logo.svg" alt="">
           </h1>
         </a>
         <!-- <nav class="header__nav md-none">
