--- a/src/index.html
+++ b/src/index.html
@@ -54,6 +54,18 @@
         <div class="header__contact-layout">
           <a href="contact.html" class="header__contact contact-button md-none">Contact</a>
         </div> -->
+        <nav class="header__nav md-none">
+          <ul class="header__items">
+              <li class="header__item"><a class="header__link" href="#"><span>Campaign</span>キャンペーン</a></li>
+              <li class="header__item"><a class="header__link" href="#"><span>About us</span>私たちについて</a></li>
+              <li class="header__item"><a class="header__link" href="#"><span>Information</span>ダイビング情報</a></li>
+              <li class="header__item"><a class="header__link" href="#"><span>Blog</span>ブログ</a></li>
+              <li class="header__item"><a class="header__link" href="#"><span>Voice</span>お客様の声</a></li>
+              <li class="header__item"><a class="header__link" href="#"><span>Price</span>料金一覧</a></li>
+              <li class="header__item"><a class="header__link" href="#"><span>FAQ</span>よくある質問</a></li>
+              <li class="header__item"><a class="header__link" href="#"><span>Contact</span>お問い合わせ</a></li>
+          </ul>
+        </nav>
       </div>
 
       <div class="hamburger js-hamburger md-show">
