ヘッダーpc更新

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
   <script defer src="./assets/js/script.js"></script>
 </head>
 <body>
-  <div class="wrap">
+ <div class="wrap">
     <header class="header js-header">
       <div class="header__inner">
         <a href="index.html" class="header__name-layout">
@@ -38,22 +38,6 @@
             <img class="header__logo" src="./assets/images/logo.svg" alt="">
           </h1>
         </a>
-        <!-- <nav class="header__nav md-none">
-          <ul class="header__items">
-            <li class="header__item">
-              <a href="about.html" class="header__link">About</a>
-            </li>
-            <li class="header__item">
-              <a href="#service" class="header__link">Service</a>
-            </li>
-            <li class="header__item">
-              <a href="#news" class="header__link">News</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="header__contact-layout">
-          <a href="contact.html" class="header__contact contact-button md-none">Contact</a>
-        </div> -->
         <nav class="header__nav md-none">
           <ul class="header__items">
               <li class="header__item"><a class="header__link" href="#"><span>Campaign</span>キャンペーン</a></li>
@@ -63,7 +47,7 @@
               <li class="header__item"><a class="header__link" href="#"><span>Voice</span>お客様の声</a></li>
               <li class="header__item"><a class="header__link" href="#"><span>Price</span>料金一覧</a></li>
               <li class="header__item"><a class="header__link" href="#"><span>FAQ</span>よくある質問</a></li>
-              <li class="header__item"><a class="header__link" href="#"><span>Contact</span>お問い合わせ</a></li>
+              <li class="header__item"><a class="header__link" href="#"><span>Contact</span>お問合せ</a></li>
           </ul>
         </nav>
       </div>
