ドロワーロゴ更新

--- a/src/index.html
+++ b/src/index.html
@@ -61,15 +61,20 @@
       </div>
 
       <div class="drawer-menu js-drawer">
-        <div class="drawer-menu__inner">
+        <div class="drawer-menu__inner inner">
+          <a href="index.html" class="drawer__name-layout">
+            <h2 class="drawer__name">
+              <img class="drawer__name-logo" src="./assets/images/logo.svg" alt="">
+            </h2>
+          </a>
           <ul class="drawer-menu__items">
             <li class="drawer-menu__item">
               <a href="about.html" class="drawer-menu__link">
-                <img class="drawer__logo1" src="" alt="ドロワー先頭ロゴ">
-                <h4 class="logo-text">About</h4>
+                <img class="drawer__logo" src="./assets/images/drawer-logo.svg" alt="ドロワー先頭ロゴ">
+                <p class="logo-text">About</p>
               </a>
             </li>
-            <li class="drawer-menu__item">
+            <!-- <li class="drawer-menu__item">
               <a href="#service" class="drawer-menu__link">
                 <img class="drawer__logo1" src="" alt="ドロワー先頭ロゴ">
                 <h4 class="logo-text">Service</h4>
@@ -83,7 +88,7 @@
             </li>
             <li class="drawer-menu__item">
               <a href="contact.html" class="drawer-menu__link drawer-menu__link--contact">Contact</a>
-            </li>
+            </li> -->
           </ul>
         </div>
       </div>
