--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
       <div class="header__inner">
         <a href="index.html" class="header__name-layout">
           <h1 class="header__name">
-            <img class="header__logo" src="./assets/images/logo.svg" alt="">
+            <img class="header__logo" src="./assets/images/logo.svg" alt="CodeUps">
           </h1>
         </a>
         <nav class="header__nav md-none">
@@ -64,14 +64,14 @@
         <div class="drawer-menu__inner inner">
           <a href="index.html" class="drawer__name-layout">
             <h2 class="drawer__name">
-              <img class="drawer__name-logo" src="./assets/images/logo.svg" alt="">
+              <img class="drawer__name-logo" src="./assets/images/logo.svg" alt="CodeUps">
             </h2>
           </a>
           <ul class="drawer-menu__items">
             <li class="drawer-menu__item">
               <a href="about.html" class="drawer-menu__link">
                 <img class="drawer__logo" src="./assets/images/drawer-logo.svg" alt="ドロワー先頭ロゴ">
-                <p class="logo-text">About</p>
+                <p class="logo-text">キャンペーン</p>
               </a>
             </li>
             <!-- <li class="drawer-menu__item">
