インナー追加とtop変更

--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
   <script defer src="./assets/js/script.js"></script>
 </head>
 <body>
- <div class="wrap">
+ <!-- <div class="wrap">
     <header class="header js-header">
       <div class="header__inner">
         <a href="index.html" class="header__name-layout">
@@ -73,7 +73,7 @@
                 <img class="drawer__logo" src="./assets/images/drawer-logo.svg" alt="ドロワー先頭ロゴ">
                 <p class="logo-text">キャンペーン</p>
               </a>
-            </li>
+            </li> -->
             <!-- <li class="drawer-menu__item">
               <a href="#service" class="drawer-menu__link">
                 <img class="drawer__logo1" src="" alt="ドロワー先頭ロゴ">
@@ -95,9 +95,13 @@
     </header>
     <main>
 
-    <!-- <div class="button-layout">
-      <a href="#" class="button">View&nbsp;More<span class="button-arrow"></span></a>
-    </div> -->
+    <div class="button-layout">
+      <a href="#" class="button">
+        <div class="button__inner">
+          View&nbsp;More<span class="button-arrow"></span>
+        </div>
+      </a>
+    </div>
     </main>
     <footer>
 
