ボタン修正

--- a/src/index.html
+++ b/src/index.html
@@ -97,9 +97,7 @@
 
     <div class="button-layout">
       <a href="#" class="button">
-        <div class="button__inner">
-          View&nbsp;More<span class="button-arrow"></span>
-        </div>
+          View&nbsp;More<span class="button-arrow2"></span><span class="button-arrow"></span>
       </a>
     </div>
     </main>
