ドロワーインナー修正

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
       </div>
 
       <div class="drawer-menu js-drawer">
-        <div class="drawer-menu__inner inner">
+        <div class="drawer-menu__inner">
           <a href="index.html" class="drawer__name-layout">
             <h2 class="drawer__name">
               <img class="drawer__name-logo" src="./assets/images/logo.svg" alt="CodeUps">
