ドロワーメニュー作成中

--- a/src/index.html
+++ b/src/index.html
@@ -69,25 +69,19 @@
           </a>
           <ul class="drawer-menu__items">
             <li class="drawer-menu__item">
-              <a href="about.html" class="drawer-menu__link">
-                <img class="drawer__logo" src="./assets/images/drawer-logo.svg" alt="ドロワー先頭ロゴ">
-                <p class="logo-text">キャンペーン</p>
+              <img class="drawer__logo" src="./assets/images/drawer-logo.svg" alt="ドロワー先頭ロゴ">
+              <a href="#" class="drawer-menu__link">
+                <p class="drawer__logo-text">キャンペーン</p>
               </a>
             </li>
+            <li class="drawer-menu__item-text"><a href="#">ライセンス取得</a></li>
+            <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
+            <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
             <!-- <li class="drawer-menu__item">
-              <a href="#service" class="drawer-menu__link">
-                <img class="drawer__logo1" src="" alt="ドロワー先頭ロゴ">
-                <h4 class="logo-text">Service</h4>
+              <a href="#" class="drawer-menu__link">
+                <img class="drawer__logo" src="./assets/images/drawer-logo.svg" alt="ドロワー先頭ロゴ">
+                <p class="drawer__logo-text">私たちについて</p>
               </a>
-            </li>
-            <li class="drawer-menu__item">
-              <a href="#news" class="drawer-menu__link">
-                <img class="drawer__logo1" src="" alt="ドロワー先頭ロゴ">
-                <h4 class="logo-text">News</h4>
-              </a>
-            </li>
-            <li class="drawer-menu__item">
-              <a href="contact.html" class="drawer-menu__link drawer-menu__link--contact">Contact</a>
             </li> -->
           </ul>
         </div>
