ドロワー修正

--- a/src/index.html
+++ b/src/index.html
@@ -67,23 +67,33 @@
               <img class="drawer__name-logo" src="./assets/images/logo.svg" alt="CodeUps">
             </h2>
           </a>
-          <ul class="drawer-menu__items">
-            <li class="drawer-menu__item">
-              <img class="drawer__logo" src="./assets/images/drawer-logo.svg" alt="ドロワー先頭ロゴ">
-              <a href="#" class="drawer-menu__link">
-                <p class="drawer__logo-text">キャンペーン</p>
-              </a>
-            </li>
-            <li class="drawer-menu__item-text"><a href="#">ライセンス取得</a></li>
-            <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
-            <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
-            <!-- <li class="drawer-menu__item">
-              <a href="#" class="drawer-menu__link">
-                <img class="drawer__logo" src="./assets/images/drawer-logo.svg" alt="ドロワー先頭ロゴ">
-                <p class="drawer__logo-text">私たちについて</p>
-              </a>
-            </li> -->
-          </ul>
+          <div class="drawer-menu__inner-left">
+            <ul class="drawer-menu__items">
+              <li class="drawer-menu__item">
+                <a href="#" class="drawer-menu__link">
+                  <p class="drawer__logo-text">キャンペーン</p>
+                </a>
+              </li>
+              <li class="drawer-menu__item-text"><a href="#">ライセンス取得</a></li>
+              <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
+              <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
+              <li class="drawer-menu__item">
+                <a href="#" class="drawer-menu__link">
+                  <p class="drawer__logo-text">私たちについて</p>
+                </a>
+              </li>
+              <li class="drawer-menu__item">
+                <a href="#" class="drawer-menu__link">
+                  <p class="drawer__logo-text">ダイビング情報</p>
+                </a>
+              </li>
+              <li class="drawer-menu__item-text"><a href="#">ライセンス取得</a></li>
+              <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
+              <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
+            </ul>
+          </div>
+
+
         </div>
       </div>
     </header>
