--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
           <span></span>
           <span></span>
         </div>
-      </div>
+  </div>
 
       <div class="drawer-menu js-drawer">
         <div class="drawer-menu__inner">
@@ -67,31 +67,131 @@
               <img class="drawer__name-logo" src="./assets/images/logo.svg" alt="CodeUps">
             </h2>
           </a>
-          <div class="drawer-menu__inner-left">
-            <ul class="drawer-menu__items">
-              <li class="drawer-menu__item">
-                <a href="#" class="drawer-menu__link">
-                  <p class="drawer__logo-text">キャンペーン</p>
-                </a>
-              </li>
-              <li class="drawer-menu__item-text"><a href="#">ライセンス取得</a></li>
-              <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
-              <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
-              <li class="drawer-menu__item">
-                <a href="#" class="drawer-menu__link">
-                  <p class="drawer__logo-text">私たちについて</p>
-                </a>
-              </li>
-              <li class="drawer-menu__item">
-                <a href="#" class="drawer-menu__link">
-                  <p class="drawer__logo-text">ダイビング情報</p>
-                </a>
-              </li>
-              <li class="drawer-menu__item-text"><a href="#">ライセンス取得</a></li>
-              <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
-              <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
-            </ul>
+          <div class="drawer-menu__container">
+            <div class="drawer-menu__container-left">
+              <ul class="drawer-menu__items-a">
+                <li class="drawer-menu__item">
+                  <a href="#" class="drawer-menu__link-a">
+                    <p class="drawer__logo-text">キャンペーン</p>
+                  </a>
+                </li>
+                  <li class="drawer-menu__item-text"><a href="#">ライセンス取得</a></li>
+                  <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
+                  <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
+                  <li class="drawer-menu__item">
+                    <a href="#" class="drawer-menu__link-b">
+                      <p class="drawer__logo-text">私たちについて</p>
+                    </a>
+                  </li>
+               </ul>
+               <ul class="drawer-menu__items-b">
+                <li class="drawer-menu__item">
+                  <a href="#" class="drawer-menu__link-a">
+                    <p class="drawer__logo-text">ダイビング情報</p>
+                  </a>
+                </li>
+                  <li class="drawer-menu__item-text"><a href="#">ライセンス講習</a></li>
+                  <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
+                  <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
+                  <li class="drawer-menu__item">
+                    <a href="#" class="drawer-menu__link-b">
+                      <p class="drawer__logo-text">ブログ</p>
+                    </a>
+                  </li>
+               </ul>
+            </div>
+            <div class="drawer-menu__container-right">
+              <ul class="drawer-menu__items-a">
+                <li class="drawer-menu__item">
+                  <a href="#" class="drawer-menu__link-a">
+                    <p class="drawer__logo-text">お客様の声</p>
+                  </a>
+                </li>
+                <li class="drawer-menu__item">
+                  <a href="#" class="drawer-menu__link-b">
+                    <p class="drawer__logo-text">料金一覧</p>
+                  </a>
+                </li>
+                  <li class="drawer-menu__item-text-b"><a href="#">ライセンス講習</a></li>
+                  <li class="drawer-menu__item-text-b"><a href="#">体験ダイビング</a></li>
+                  <li class="drawer-menu__item-text-b"><a href="#">ファンダイビング</a></li>
+               </ul>
+               <ul class="drawer-menu__items-b">
+                <li class="drawer-menu__item">
+                  <a href="#" class="drawer-menu__link-a">
+                    <p class="drawer__logo-text">よくある質問</p>
+                  </a>
+                </li>
+                <li class="drawer-menu__item">
+                  <a href="#" class="drawer-menu__link-b">
+                    <p class="drawer__logo-text">プライバシー<br>ポリシー</p>
+                  </a>
+                </li>
+                <li class="drawer-menu__item">
+                  <a href="#" class="drawer-menu__link-b">
+                    <p class="drawer__logo-text">利用規約</p>
+                  </a>
+                </li>
+                <li class="drawer-menu__item">
+                  <a href="#" class="drawer-menu__link-b">
+                    <p class="drawer__logo-text">お問い合わせ</p>
+                  </a>
+                </li>
+               </ul>
+            </div>
+
           </div>
+
+                  <!-- <li class="drawer-menu__item">
+                    <a href="#" class="drawer-menu__link">
+                      <p class="drawer__logo-text">ダイビング情報</p>
+                    </a>
+                  </li>
+                  <li class="drawer-menu__item-text"><a href="#">ライセンス講習</a></li>
+                  <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
+                  <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
+                  <li class="drawer-menu__item">
+                    <a href="#" class="drawer-menu__link">
+                      <p class="drawer__logo-text">ブログ</p>
+                    </a>
+                  </li>
+                </ul>
+              </div> -->
+              <!-- <div class="drawer-menu__inner-right">
+                <li class="drawer-menu__item">
+                  <a href="#" class="drawer-menu__link">
+                    <p class="drawer__logo-text">お客様の声</p>
+                  </a>
+                </li>
+                <li class="drawer-menu__item">
+                  <a href="#" class="drawer-menu__link">
+                    <p class="drawer__logo-text">料金一覧</p>
+                  </a>
+                </li>
+                <li class="drawer-menu__item-text"><a href="#">ライセンス取得</a></li>
+                <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
+                <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
+                <li class="drawer-menu__item">
+                  <a href="#" class="drawer-menu__link">
+                    <p class="drawer__logo-text">よくある質問</p>
+                  </a>
+                </li>
+                <li class="drawer-menu__item">
+                  <a href="#" class="drawer-menu__link">
+                    <p class="drawer__logo-text">プライバシー<br>ポリシー</p>
+                  </a>
+                </li>
+                <li class="drawer-menu__item">
+                  <a href="#" class="drawer-menu__link">
+                    <p class="drawer__logo-text">利用規約</p>
+                  </a>
+                </li>
+                <li class="drawer-menu__item">
+                  <a href="#" class="drawer-menu__link">
+                    <p class="drawer__logo-text">お問い合わせ</p>
+                  </a>
+                </li>
+              </div>
 
 
         </div>
