--- a/src/index.html
+++ b/src/index.html
@@ -139,71 +139,17 @@
                 </li>
                </ul>
             </div>
-
           </div>
-
-                  <!-- <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link">
-                      <p class="drawer__logo-text">ダイビング情報</p>
-                    </a>
-                  </li>
-                  <li class="drawer-menu__item-text"><a href="#">ライセンス講習</a></li>
-                  <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
-                  <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
-                  <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link">
-                      <p class="drawer__logo-text">ブログ</p>
-                    </a>
-                  </li>
-                </ul>
-              </div> -->
-              <!-- <div class="drawer-menu__inner-right">
-                <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link">
-                    <p class="drawer__logo-text">お客様の声</p>
-                  </a>
-                </li>
-                <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link">
-                    <p class="drawer__logo-text">料金一覧</p>
-                  </a>
-                </li>
-                <li class="drawer-menu__item-text"><a href="#">ライセンス取得</a></li>
-                <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
-                <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
-                <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link">
-                    <p class="drawer__logo-text">よくある質問</p>
-                  </a>
-                </li>
-                <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link">
-                    <p class="drawer__logo-text">プライバシー<br>ポリシー</p>
-                  </a>
-                </li>
-                <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link">
-                    <p class="drawer__logo-text">利用規約</p>
-                  </a>
-                </li>
-                <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link">
-                    <p class="drawer__logo-text">お問い合わせ</p>
-                  </a>
-                </li>
-              </div>
-
-
         </div>
       </div>
     </header>
     <main>
 
-    <!-- <div class="button-layout">
+    <div class="button-layout">
       <a href="#" class="button">
           View&nbsp;More<span class="button-arrow2"></span><span class="button-arrow"></span>
       </a>
-    </div> -->
+    </div>
     </main>
     <footer>
 
