ドロワー修正２

--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
             <div class="drawer-menu__container-left">
               <ul class="drawer-menu__items-a">
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link-a">
+                  <a href="#" class="drawer-menu__link">
                     <p class="drawer__logo-text">キャンペーン</p>
                   </a>
                 </li>
@@ -79,14 +79,14 @@
                   <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
                   <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-b">
+                    <a href="#" class="drawer-menu__link">
                       <p class="drawer__logo-text">私たちについて</p>
                     </a>
                   </li>
                </ul>
                <ul class="drawer-menu__items-b">
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link-a">
+                  <a href="#" class="drawer-menu__link">
                     <p class="drawer__logo-text">ダイビング情報</p>
                   </a>
                 </li>
@@ -94,7 +94,7 @@
                   <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
                   <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link-b">
+                    <a href="#" class="drawer-menu__link">
                       <p class="drawer__logo-text">ブログ</p>
                     </a>
                   </li>
@@ -103,12 +103,12 @@
             <div class="drawer-menu__container-right">
               <ul class="drawer-menu__items-a">
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link-a">
+                  <a href="#" class="drawer-menu__link">
                     <p class="drawer__logo-text">お客様の声</p>
                   </a>
                 </li>
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link-b">
+                  <a href="#" class="drawer-menu__link">
                     <p class="drawer__logo-text">料金一覧</p>
                   </a>
                 </li>
@@ -118,22 +118,22 @@
                </ul>
                <ul class="drawer-menu__items-b">
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link-a">
+                  <a href="#" class="drawer-menu__link">
                     <p class="drawer__logo-text">よくある質問</p>
                   </a>
                 </li>
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link-b">
+                  <a href="#" class="drawer-menu__link">
                     <p class="drawer__logo-text">プライバシー<br>ポリシー</p>
                   </a>
                 </li>
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link-b">
+                  <a href="#" class="drawer-menu__link">
                     <p class="drawer__logo-text">利用規約</p>
                   </a>
                 </li>
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link-b">
+                  <a href="#" class="drawer-menu__link">
                     <p class="drawer__logo-text">お問い合わせ</p>
                   </a>
                 </li>
@@ -144,12 +144,41 @@
       </div>
     </header>
     <main>
+    <!--メインビュー-->
+<!-- <div class="mv js-mv">
+      <div class="mv__title-wrap">
+        <h2 class="mv__sub-title">DIVING</h2>
+        <h3 class="mv__text">〜快適なオフィスを<br class="u-mobile">デザインする〜
+        </h3>
+        <h3 class="mv__text-sp">快適なオフィスを<br class="u-mobile">デザインする
+        </h3>
+      </div>
+      <div class="mv__slider swiper">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <div class="swiper-img">
+              <img src="/images/mv-img-1.jpg" alt="エントランスからオフィスの廊下の端まで見れる様子">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-img">
+              <img src="/images/mv-img-2.jpg" alt="廊下からオフィスが見れる様子">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-img">
+              <img src="/images/mv-img-3.jpg" alt="食堂兼ミーティングルームの様子">
+            </div>
+          </div>
+        </div>
+      </div>
+   </div> -->
 
-    <div class="button-layout">
+    <!-- <div class="button-layout">
       <a href="#" class="button">
           View&nbsp;More<span class="button-arrow2"></span><span class="button-arrow"></span>
       </a>
-    </div>
+    </div> -->
     </main>
     <footer>
 
