--- a/src/index.html
+++ b/src/index.html
@@ -71,7 +71,7 @@
             <div class="drawer-menu__container-left">
               <ul class="drawer-menu__items-a">
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link">
+                  <a href="#" class="drawer-menu__link-a">
                     <p class="drawer__logo-text">キャンペーン</p>
                   </a>
                 </li>
@@ -79,14 +79,14 @@
                   <li class="drawer-menu__item-text"><a href="#">貸切体験ダイビング</a></li>
                   <li class="drawer-menu__item-text"><a href="#">ナイトダイビング</a></li>
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link">
+                    <a href="#" class="drawer-menu__link-b">
                       <p class="drawer__logo-text">私たちについて</p>
                     </a>
                   </li>
                </ul>
                <ul class="drawer-menu__items-b">
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link">
+                  <a href="#" class="drawer-menu__link-a">
                     <p class="drawer__logo-text">ダイビング情報</p>
                   </a>
                 </li>
@@ -94,7 +94,7 @@
                   <li class="drawer-menu__item-text"><a href="#">体験ダイビング</a></li>
                   <li class="drawer-menu__item-text"><a href="#">ファンダイビング</a></li>
                   <li class="drawer-menu__item">
-                    <a href="#" class="drawer-menu__link">
+                    <a href="#" class="drawer-menu__link-b">
                       <p class="drawer__logo-text">ブログ</p>
                     </a>
                   </li>
@@ -103,12 +103,12 @@
             <div class="drawer-menu__container-right">
               <ul class="drawer-menu__items-a">
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link">
+                  <a href="#" class="drawer-menu__link-a">
                     <p class="drawer__logo-text">お客様の声</p>
                   </a>
                 </li>
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link">
+                  <a href="#" class="drawer-menu__link-b">
                     <p class="drawer__logo-text">料金一覧</p>
                   </a>
                 </li>
@@ -118,22 +118,22 @@
                </ul>
                <ul class="drawer-menu__items-b">
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link">
+                  <a href="#" class="drawer-menu__link-a">
                     <p class="drawer__logo-text">よくある質問</p>
                   </a>
                 </li>
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link">
+                  <a href="#" class="drawer-menu__link-b">
                     <p class="drawer__logo-text">プライバシー<br>ポリシー</p>
                   </a>
                 </li>
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link">
+                  <a href="#" class="drawer-menu__link-b">
                     <p class="drawer__logo-text">利用規約</p>
                   </a>
                 </li>
                 <li class="drawer-menu__item">
-                  <a href="#" class="drawer-menu__link">
+                  <a href="#" class="drawer-menu__link-b">
                     <p class="drawer__logo-text">お問い合わせ</p>
                   </a>
                 </li>
