--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,8 @@
   <!-- JavaScript -->
   <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script defer src="./assets/js/script.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js" defer></script>
+  <script src="/js/script.js" defer></script>
 </head>
 <body>
  <div class="wrap">
@@ -145,34 +147,42 @@
     </header>
     <main>
     <!--メインビュー-->
-<!-- <div class="mv js-mv">
+   <div class="mv js-mv">
       <div class="mv__title-wrap">
         <h2 class="mv__sub-title">DIVING</h2>
-        <h3 class="mv__text">〜快適なオフィスを<br class="u-mobile">デザインする〜
-        </h3>
-        <h3 class="mv__text-sp">快適なオフィスを<br class="u-mobile">デザインする
-        </h3>
+        <h3 class="mv__text">into&nbsp;the&nbsp;ocean</h3>
       </div>
       <div class="mv__slider swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="swiper-img">
-              <img src="/images/mv-img-1.jpg" alt="エントランスからオフィスの廊下の端まで見れる様子">
+              <img src="./assets/images/mv-img1-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="pc-img">
+              <img src="./assets/images/mv-img1.jpg" alt="ウミガメが海を泳いでいる様子" class="sp-img">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-slide">
+              <div class="swiper-img">
+                <img src="./assets/images/mv-img2-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="pc-img">
+                <img src="./assets/images/mv-img2.jpg" alt="ウミガメが海を泳いでいる様子" class="sp-img">
+              </div>
             </div>
           </div>
           <div class="swiper-slide">
             <div class="swiper-img">
-              <img src="/images/mv-img-2.jpg" alt="廊下からオフィスが見れる様子">
+              <img src="./assets/images/mv-img3-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="pc-img">
+              <img src="./assets/images/mv-img3.jpg" alt="ウミガメが海を泳いでいる様子" class="sp-img">
             </div>
           </div>
           <div class="swiper-slide">
             <div class="swiper-img">
-              <img src="/images/mv-img-3.jpg" alt="食堂兼ミーティングルームの様子">
+              <img src="./assets/images/mv-img4-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="pc-img">
+              <img src="./assets/images/mv-img4.jpg" alt="ウミガメが海を泳いでいる様子" class="sp-img">
             </div>
           </div>
         </div>
       </div>
-   </div> -->
+   </div>
 
     <!-- <div class="button-layout">
       <a href="#" class="button">
