u-追加とrem変更

--- a/src/index.html
+++ b/src/index.html
@@ -149,35 +149,33 @@
     <!--メインビュー-->
    <div class="mv js-mv">
       <div class="mv__title-wrap">
-        <h2 class="mv__sub-title">DIVING</h2>
+        <h2 class="mv__title-sub">DIVING</h2>
         <h3 class="mv__text">into&nbsp;the&nbsp;ocean</h3>
       </div>
       <div class="mv__slider swiper">
         <div class="swiper-wrapper">
           <div class="swiper-slide">
             <div class="swiper-img">
-              <img src="./assets/images/mv-img1-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="pc-img">
-              <img src="./assets/images/mv-img1.jpg" alt="ウミガメが海を泳いでいる様子" class="sp-img">
-            </div>
-          </div>
-          <div class="swiper-slide">
-            <div class="swiper-slide">
-              <div class="swiper-img">
-                <img src="./assets/images/mv-img2-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="pc-img">
-                <img src="./assets/images/mv-img2.jpg" alt="ウミガメが海を泳いでいる様子" class="sp-img">
-              </div>
+              <img src="./assets/images/mv-img1-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="u-desktop">
+              <img src="./assets/images/mv-img1.jpg" alt="ウミガメが海を泳いでいる様子" class="u-mobile">
             </div>
           </div>
           <div class="swiper-slide">
             <div class="swiper-img">
-              <img src="./assets/images/mv-img3-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="pc-img">
-              <img src="./assets/images/mv-img3.jpg" alt="ウミガメが海を泳いでいる様子" class="sp-img">
+              <img src="./assets/images/mv-img2-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="u-desktop">
+              <img src="./assets/images/mv-img2.jpg" alt="ウミガメが海を泳いでいる様子" class="u-mobile">
             </div>
           </div>
           <div class="swiper-slide">
             <div class="swiper-img">
-              <img src="./assets/images/mv-img4-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="pc-img">
-              <img src="./assets/images/mv-img4.jpg" alt="ウミガメが海を泳いでいる様子" class="sp-img">
+              <img src="./assets/images/mv-img3-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="u-desktop">
+              <img src="./assets/images/mv-img3.jpg" alt="ウミガメが海を泳いでいる様子" class="u-mobile">
+            </div>
+          </div>
+          <div class="swiper-slide">
+            <div class="swiper-img">
+              <img src="./assets/images/mv-img4-pc.jpg" alt="ウミガメが海を泳いでいる様子" class="u-desktop">
+              <img src="./assets/images/mv-img4.jpg" alt="ウミガメが海を泳いでいる様子" class="u-mobile">
             </div>
           </div>
         </div>
