セクションタイトル調整とキャンペーンインナー修正

--- a/src/index.html
+++ b/src/index.html
@@ -183,7 +183,7 @@
    </div>
   <!--キャンペーン-->
   <section id="campaign" class="campaign">
-    <div class="service__inner inner">
+    <div class="campaign__inner inner">
       <div class="section-title">
         <h3 class="section-title__main">Campaign</h3>
         <h3 class="section-title__sub">キャンペーン</h3>
