キャンペーンのカード追加

--- a/src/index.html
+++ b/src/index.html
@@ -188,18 +188,84 @@
         <h3 class="section-title__main">Campaign</h3>
         <h3 class="section-title__sub">キャンペーン</h3>
       </div>
-      <div class="service__cards">
+      <div class="campaign__cards">
         <a href="#" class="card__item">
-                <div class="card__img">
-                  <p class="card__img-text">suit</p>
-                  <img src="/images/card1.jpg" alt="黒色のシンプルなカジュアルスーツ">
-                </div>
-                <div class="card__body">
-                  <p class="card__text">カジュアルスーツ</p>
-                  <h3 class="card__text-sub">あなただけでのスタイルで着こなす、あなただけの一着を</h3>
-                </div>
+          <div class="card__img">
+            <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
+          </div>
+          <div class="card__body">
+            <div class="card-text">
+              <p class="card-text__title">ライセンス講習</p>
+              <p class="card-text__title-sub">ライセンス取得</p>
+            </div>
+            <p class="text-line"></p>
+            <div class="card-price">
+              <p class="card-price__text"></p>
+              <div class="card-price-box">
+                <p class="card-price__old"></p>
+                <p class="card-price__new"></p>
+              </div>
+            </div>
+          </div>
         </a>
         <a href="#" class="card__item">
+          <div class="card__img">
+            <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
+          </div>
+          <div class="card__body">
+            <div class="card-text">
+              <p class="card-text__title">ライセンス講習</p>
+              <p class="card-text__title-sub">ライセンス取得</p>
+            </div>
+            <p class="text-line"></p>
+            <div class="card-price">
+              <p class="card-price__text"></p>
+              <div class="card-price-box">
+                <p class="card-price__old"></p>
+                <p class="card-price__new"></p>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="#" class="card__item">
+          <div class="card__img">
+            <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
+          </div>
+          <div class="card__body">
+            <div class="card-text">
+              <p class="card-text__title">ライセンス講習</p>
+              <p class="card-text__title-sub">ライセンス取得</p>
+            </div>
+            <p class="text-line"></p>
+            <div class="card-price">
+              <p class="card-price__text"></p>
+              <div class="card-price-box">
+                <p class="card-price__old"></p>
+                <p class="card-price__new"></p>
+              </div>
+            </div>
+          </div>
+        </a>
+        <a href="#" class="card__item">
+          <div class="card__img">
+            <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
+          </div>
+          <div class="card__body">
+            <div class="card-text">
+              <p class="card-text__title">ライセンス講習</p>
+              <p class="card-text__title-sub">ライセンス取得</p>
+            </div>
+            <p class="text-line"></p>
+            <div class="card-price">
+              <p class="card-price__text"></p>
+              <div class="card-price-box">
+                <p class="card-price__old"></p>
+                <p class="card-price__new"></p>
+              </div>
+            </div>
+          </div>
+        </a>
+        <!-- <a href="#" class="card__item">
                 <div class="card__img">
                   <p class="card__img-text">suit</p>
                   <img src="/images/card2.jpg" alt="グレーのネクタイと青のストライプが特徴的なリクルートスーツ">
@@ -218,7 +284,7 @@
                   <p class="card__text">フォーマルスーツ</p>
                   <h3 class="card__text-sub">あなただけでのスタイルで着こなす、あなただけの一着を</h3>
                 </div>
-        </a>
+        </a> -->
       </div>
     </div>
     <!-- <div class="button-layout">
