キャンペーンhtml修正

--- a/src/index.html
+++ b/src/index.html
@@ -200,7 +200,7 @@
             </div>
             <p class="text-line"></p>
             <div class="card-price">
-              <p class="card-price__text"></p>
+              <p class="card-price__text">全部コミコミ（お一人様）</p>
               <div class="card-price-box">
                 <p class="card-price__old"></p>
                 <p class="card-price__new"></p>
@@ -210,16 +210,16 @@
         </a>
         <a href="#" class="card__item">
           <div class="card__img">
-            <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
+            <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
           </div>
           <div class="card__body">
             <div class="card-text">
-              <p class="card-text__title">ライセンス講習</p>
-              <p class="card-text__title-sub">ライセンス取得</p>
+              <p class="card-text__title">体験ダイビング</p>
+              <p class="card-text__title-sub">貸切体験ダイビング</p>
             </div>
             <p class="text-line"></p>
             <div class="card-price">
-              <p class="card-price__text"></p>
+              <p class="card-price__text">全部コミコミ（お一人様）</p>
               <div class="card-price-box">
                 <p class="card-price__old"></p>
                 <p class="card-price__new"></p>
@@ -229,16 +229,16 @@
         </a>
         <a href="#" class="card__item">
           <div class="card__img">
-            <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
+            <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
           </div>
           <div class="card__body">
             <div class="card-text">
-              <p class="card-text__title">ライセンス講習</p>
-              <p class="card-text__title-sub">ライセンス取得</p>
+              <p class="card-text__title">体験ダイビング</p>
+              <p class="card-text__title-sub">ナイトダイビング</p>
             </div>
             <p class="text-line"></p>
             <div class="card-price">
-              <p class="card-price__text"></p>
+              <p class="card-price__text">全部コミコミ（お一人様）</p>
               <div class="card-price-box">
                 <p class="card-price__old"></p>
                 <p class="card-price__new"></p>
@@ -248,16 +248,16 @@
         </a>
         <a href="#" class="card__item">
           <div class="card__img">
-            <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
+            <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
           </div>
           <div class="card__body">
             <div class="card-text">
-              <p class="card-text__title">ライセンス講習</p>
-              <p class="card-text__title-sub">ライセンス取得</p>
+              <p class="card-text__title">ファンダイビング</p>
+              <p class="card-text__title-sub">貸切ファンダイビング</p>
             </div>
             <p class="text-line"></p>
             <div class="card-price">
-              <p class="card-price__text"></p>
+              <p class="card-price__text">全部コミコミ（お一人様）</p>
               <div class="card-price-box">
                 <p class="card-price__old"></p>
                 <p class="card-price__new"></p>
@@ -265,26 +265,6 @@
             </div>
           </div>
         </a>
-        <!-- <a href="#" class="card__item">
-                <div class="card__img">
-                  <p class="card__img-text">suit</p>
-                  <img src="/images/card2.jpg" alt="グレーのネクタイと青のストライプが特徴的なリクルートスーツ">
-                </div>
-                <div class="card__body">
-                  <p class="card__text">リクルートスーツ</p>
-                  <h3 class="card__text-sub">あなただけでのスタイルで着こなす、あなただけの一着を</h3>
-                </div>
-        </a>
-        <a href="#" class="card__item">
-                <div class="card__img">
-                  <p class="card__img-text">suit</p>
-                  <img src="/images/card3.jpg" alt="洋画のパーティーシーンで出てくるようなフォーマルスーツ">
-                </div>
-                <div class="card__body">
-                  <p class="card__text">フォーマルスーツ</p>
-                  <h3 class="card__text-sub">あなただけでのスタイルで着こなす、あなただけの一着を</h3>
-                </div>
-        </a> -->
       </div>
     </div>
     <!-- <div class="button-layout">
