キャンペーンページ修正

--- a/src/index.html
+++ b/src/index.html
@@ -189,8 +189,8 @@
         <h3 class="section-title__sub">キャンペーン</h3>
       </div>
       <div class="campaign__cards">
-        <a href="#" class="card__item">
-          <div class="card__img">
+        <a href="#" class="campaign-card__item">
+          <div class="campaign-card__img">
             <img src="./assets/images/campaign-img1.jpg" alt="多種多様のカラフルな魚たちが泳いでいる様子">
           </div>
           <div class="card__body">
@@ -202,14 +202,14 @@
             <div class="card-price">
               <p class="card-price__text">全部コミコミ（お一人様）</p>
               <div class="card-price-box">
-                <p class="card-price__old"></p>
-                <p class="card-price__new"></p>
+                <p class="card-price__old">¥56,000</p>
+                <p class="card-price__new">¥46,000</p>
               </div>
             </div>
           </div>
         </a>
-        <a href="#" class="card__item">
-          <div class="card__img">
+        <a href="#" class="campaign-card__item">
+          <div class="campaign-card__img">
             <img src="./assets/images/campaign-img2.jpg" alt="綺麗な海に船が3隻停泊している様子">
           </div>
           <div class="card__body">
@@ -221,14 +221,14 @@
             <div class="card-price">
               <p class="card-price__text">全部コミコミ（お一人様）</p>
               <div class="card-price-box">
-                <p class="card-price__old"></p>
-                <p class="card-price__new"></p>
+                <p class="card-price__old">¥24,000</p>
+                <p class="card-price__new">¥18,000</p>
               </div>
             </div>
           </div>
         </a>
-        <a href="#" class="card__item">
-          <div class="card__img">
+        <a href="#" class="campaign-card__item">
+          <div class="campaign-card__img">
             <img src="./assets/images/campaign-img3.jpg" alt="暗い海の中を泳いているクラゲが光に当てられている様子">
           </div>
           <div class="card__body">
@@ -246,7 +246,7 @@
             </div>
           </div>
         </a>
-        <a href="#" class="card__item">
+        <a href="#" class="campaign-card__item">
           <div class="card__img">
             <img src="./assets/images/campaign-img4.jpg" alt="複数のダイバーたちが海の上で今にも潜ろうとしている様子">
           </div>
