キャンペーン修正2

--- a/src/index.html
+++ b/src/index.html
@@ -202,7 +202,7 @@
             <div class="card-price">
               <p class="card-price__text">全部コミコミ（お一人様）</p>
               <div class="card-price-box">
-                <p class="card-price__old">¥56,000</p>
+                <p class="card-price__old-strike-through">¥56,000</p>
                 <p class="card-price__new">¥46,000</p>
               </div>
             </div>
@@ -221,7 +221,7 @@
             <div class="card-price">
               <p class="card-price__text">全部コミコミ（お一人様）</p>
               <div class="card-price-box">
-                <p class="card-price__old">¥24,000</p>
+                <p class="card-price__old-strike-through">¥24,000</p>
                 <p class="card-price__new">¥18,000</p>
               </div>
             </div>
